// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the children after the tabs 1`] = `
<DocumentFragment>
  <div
    class="tabsContainer root"
  >
    <div
      class="tabs root"
    >
      <div
        class="tabsContainerWrapper"
      >
        <ul
          class="tabsContainer"
        >
          <li
            class="tab root"
          >
            <button
              title="tabTitle1"
              type="button"
            >
              tabTitle1
            </button>
          </li>
          <li
            class="tab root"
          >
            <button
              title="tabTitle2"
              type="button"
            >
              tabTitle2
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="view"
  >
    <h1>
      Child
    </h1>
  </div>
</DocumentFragment>
`;

exports[`Should render the children with the passed props 1`] = `
<DocumentFragment>
  <div
    class="tabsContainer root"
  >
    <div
      class="tabs root"
    >
      <div
        class="tabsContainerWrapper"
      >
        <ul
          class="tabsContainer"
        >
          <li
            class="tab root"
          >
            <button
              title="tabTitle1"
              type="button"
            >
              tabTitle1
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="view"
  >
    <h2>
      Value
    </h2>
  </div>
</DocumentFragment>
`;

exports[`Should render the header between children and tabs 1`] = `
<DocumentFragment>
  <div
    class="tabsContainer root"
  >
    <div
      class="tabs root"
    >
      <div
        class="tabsContainerWrapper"
      >
        <ul
          class="tabsContainer"
        >
          <li
            class="tab root"
          >
            <button
              title="tabTitle1"
              type="button"
            >
              tabTitle1
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="view"
  >
    <h1>
      Header
    </h1>
    <h2>
      Child
    </h2>
  </div>
</DocumentFragment>
`;
